quiz vocab common expresions and quiz gramm pokazne zamenice

--- a/src/app/mind-your-language/mind-your-language.component.html
+++ b/src/app/mind-your-language/mind-your-language.component.html
@@ -13,6 +13,16 @@
             </ul>
         </li>
         <li><a href="/mind-your-language/#morfologija">Морфологија</a>
+            <ul>
+                <li><a href="/mind-your-language/#morfologija-imenice">Именице</a></li>
+                <li><a href="/mind-your-language/#morfologija-zamenice">Заменице</a></li>
+                <li><a href="/mind-your-language/#morfologija-pridevi">Придеви</a></li>
+                <li><a href="/mind-your-language/#morfologija-brojevi">Бројеви</a></li>
+                <li><a href="/mind-your-language/#morfologija-glagolski-oblici">Глаголски облици</a></li>
+                <li><a href="/mind-your-language/#morfologija-nepromenljive-reci">Непроменљиве речи</a></li>
+            </ul>
+        </li>
+        <li><a href="/mind-your-language/#sintaksa-i-semantika">Синтакса и семантика</a></li>
     </ul>
     <hr>
     
@@ -187,9 +197,50 @@
     <hr>
 
     <h1 class="display-6 fw-bold" id="morfologija">Морфологија</h1>
+    <h2 class="display-8 fw-bold" id="morfologija-imenice">Именице</h2>
     <p class="col-md-11 fs-5">
-        
+        &nbsp; &nbsp; &nbsp; Ова граматичка категорија се разликује од исте у стандардном српском језику по аналитичкој деклинацији, 
+        односно свођењем падежних облика на ОП (Општи Падеж који најчешће узима облик акузатива) који је једнак номинативу код именица 
+        средњег рода једнине и сва три рода множине, затим чињеници да неке именице подлежу компарацији, а неке именице (именице које 
+        су биле женског рода али се завршавају на сугласник) су промениле род. Ивић код ПТДГ говора успоставља четири деклинациона 
+        типа именица. 
+    </p>
+
+    <h2 class="display-8 fw-bold" id="morfologija-zamenice">Заменице</h2>
+    <p class="col-md-11 fs-5">
+        &nbsp; &nbsp; &nbsp; Личне заменице имају облике за номинатив и ОП, а специјално личне заменице за 1. и 2. лице једнине, као 
+        и за 3. лице једнине женског рода имају облике и за стари датив, уз напомену да су облици старог датива мање фреквентни у односу 
+        на синтагматске конструкције предлог + ОП (ово није карактеристично само за исказивање датива, већ се овом предлошко-падежном 
+        синтагмом остварују и остала падежна значења). Појава удвајања пуних и енклитичких облика личних заменица је доста изражена, а 
+        бележи се и њихова плеонастичка употреба.<br/>
+        &nbsp; &nbsp; &nbsp; Именичка заменица ко има облике <em>кој</em> и <em>куј</em>, док именичка заменица шта има облике 
+        <em>коѐ, кво, кăкво̀</em>, као и облик <em>што</em>, али се овај облик ређе употребљава у релативном, неодређеном и упитном значењу.
+        Неодређена именичка заменица неко има облике <em>нѐкој, нѐки, нѝки</em>, а заменица нешто има облике <em>нѐшто, нѝшто,
+        некво̀, никво̀, некоѐ</em>. Одрична именичка заменица нико има облик <em>нѝкој</em>, а заменица ништа облике 
+        <em>нѝшта, нѝшто, никоѐ, никво̀</em>. 
+    </p>
+
+    <h2 class="display-8 fw-bold" id="morfologija-pridevi">Придеви</h2>
+    <p class="col-md-11 fs-5">
+        &nbsp; &nbsp; &nbsp;
+    </p>
+
+    <h2 class="display-8 fw-bold" id="morfologija-brojevi">Бројеви</h2>
+    <p class="col-md-11 fs-5">
+        &nbsp; &nbsp; &nbsp;
+    </p>
+
+    <h2 class="display-8 fw-bold" id="morfologija-glagolski-oblici">Глаголски облици</h2>
+    <p class="col-md-11 fs-5">
+        &nbsp; &nbsp; &nbsp;
+    </p>
+
+    <h2 class="display-8 fw-bold" id="morfologija-nepromenljive-reci">Непроменљиве речи</h2>
+    <p class="col-md-11 fs-5">
+        &nbsp; &nbsp; &nbsp;
     </p>
     <hr>
 
+    <h1 class="display-6 fw-bold" id="sintaksa-i-semantika">Синтакса и семантика</h1>
+    <hr>
 </div>
